# taxi_desy

./: .gitignore  _impact.cmd  clockConfig.vhd  dac088s085_x3.vhd  eventFifoSystem.vhd  gpsTiming.vhd  impact_impact.xwbt  par_usage_statistics.html  planAhead_pid412.debug  s4_2.tok  s7.tok  scope1.cdc  scope2.cdc  scope_dsr4.cdc  serdesIn_1to8.vhd  taxi.gise  taxi.ipf  taxi.xise  taxiTop.cpj  taxiTop.vhd  taxiTop_bitgen.xwbt  taxiTop_guide.ncd  taxiTop_summary.html  taxi_rom.mcs  testRam_test.vhd  triggerDataDelay.vhd  types.vhd  webtalk_impact.xml
build_env/: .project
software/: .gitignore  .project  CMakeLists.txt  at91sam9g45.cmake  common.cmake  createBuildAt91.sh  createBuildX86.sh  howtocompile.txt
software/cmake/: FindROOT.cmake  avr-cross.cmake  boost.cmake  buildhelp.cmake  glog.cmake  hessdaq.cmake  lib_fastcgi.cmake  lib_restcgi.cmake  lib_root.cmake  ncurses.cmake  poco.cmake  procps.cmake  protobuf.cmake  pthread.cmake  thrift.cmake  zmq.cmake
software/src/: CMakeLists.txt  createBuild.sh
software/src/cpuload/: CMakeLists.txt  main.cpp
software/src/ctaPower/: CMakeLists.txt  main.cpp
software/src/ctaRw/: CMakeLists.txt  main.cpp
software/src/driver/: CMakeLists.txt
software/src/driver/daqdrv/: .gitignore  CMakeLists.txt  Makefile  daq_irq.h  daqdrv.c  debugfs.h  dma.h  dma_engine_extension.h  smcbus.h  tools.h
software/src/driver/fpgadrv/: .gitignore  CMakeLists.txt  Makefile  fpga_char_bus.h  fpgadrv.c
software/src/driver/libdaqdrv/: CMakeLists.txt
software/src/driver/libdaqdrv/hal/: daqdrv.c  daqdrv.h  daqdrv_defines.h  daqdrv_ioctl.h
software/src/driver/libfpgadrv/: CMakeLists.txt
software/src/driver/libsmcdrv/: CMakeLists.txt
software/src/driver/smcdrv/: .gitignore  CMakeLists.txt  Makefile  debug.h  smc_chardev.h  smc_ioctl_defines.h  smcdrv.c  smcif.h
software/src/eventReceiver/: CMakeLists.txt  main.cpp
software/src/eventSender/: CMakeLists.txt  main.cpp
software/src/fpgaboot/: CMakeLists.txt  main.cpp
software/src/httpdfcgi/: CMakeLists.txt  csvexport.cpp  echo.cpp  lighttpd.conf  metrics.cpp  rest.cpp  status.cpp
software/src/icescint/: CMakeLists.txt
software/src/icescint/common/: CMakeLists.txt  ThriftAutoClient.cpp  ThriftAutoClient.hpp
software/src/icescint/iceScintConfig/: CMakeLists.txt  main.cpp
software/src/icescint/iceScintDrs4BaselineCalibrator/: CMakeLists.txt  main.cpp  main_mp.cpp
software/src/icescint/iceScintIrigDebuger/: main.cpp
software/src/icescint/iceScintPanel/: CMakeLists.txt  main.cpp
software/src/icescint/icescint_debugger/: CMakeLists.txt  main.cpp
software/src/icescint/icescint_gpb/: CMakeLists.txt  Cmd.cpp  Cmd.h  main.cpp  protocol.c  protocol.h  readme.txt  rs485_packet_format.txt
software/src/icescint/icescint_gpb_bootloader/: ATmegaBOOT.c  CMakeLists.txt
software/src/icescint/icescint_gpb_client/: CMakeLists.txt  main.cpp  protocol.h
software/src/icescint/icescint_gpb_programmer/: CMakeLists.txt  FlashMemory.hpp  hexfile.h  main.cpp  testTaxiSerial.cpp  testpmtsender.cpp
software/src/icescint/icescint_gpb_release_2017_07/: icescint_bootloader-atmega128.hex  program.sh
software/src/icescint/icescint_gpb_release_2017_12/: icescint-atmega128.hex
software/src/icescint/icescint_register_info/: CMakeLists.txt  main.cpp
software/src/icescint/icescint_slowcontrol_client/: CMakeLists.txt  SlowControl.cpp  SlowControl.hpp  main.cpp
software/src/icescint/icescint_slowcontrol_server/: .gitignore  CMakeLists.txt  icescint_slowcontrolHandler.hpp  main.cpp
software/src/icescint/libgpb/: CMakeLists.txt
software/src/icescint/test_daqdrv/: CMakeLists.txt  directReadout.cpp  drvReadout.cpp
software/src/icescint/test_root/: CMakeLists.txt  baselineRoiAnalyser.cpp  demo.root  drs4_waveform.hpp  test.root  testCorrelation.C  testCorrelation.cpp  testHistogram.cpp
software/src/install_at91/: .gitignore  CMakeLists.txt  howto_deploy.txt  install_pubkey_on.sh  install_tar_file.sh  setupenv.sourceme  taxi_id_rsa
software/src/install_at91/firmware/: icescint-gpb-1v0.hex  icescint-gpb-1v1.hex  icescint_180112_06.bit  icescint_180130_02.bit  icescint_180710_00.bit  icescint_190125_00.bit  uvlogger_181117_00.bit  uvlogger_181128_00.bit  uvlogger_181129_00.bit  uvlogger_181201_00.bit  uvlogger_181207_00.bit
software/src/install_at91/firmware_old/: uvlogger_181205_00.bit
software/src/install_at91/install/: daqdrv.d  desy-feed.conf  eventSender.d  fpgaboot.d  fpgaconfig.d  fpgadrv.d  lighttpd.conf  profile  screen.d  smcdrv.d  taxi_install.sh
software/src/install_at91/www/: index_old.html  testroot2.html
software/src/libcommon/: CMakeLists.txt
software/src/libcommon/common/: CpuLoad.cpp  CpuLoad.hpp  NetworkStatistic.cpp  NetworkStatistic.hpp  SimpleCurses.hpp  icescint_validator.hpp  zmq_verbose_socket.hpp
software/src/libfastcgipp/: CMakeLists.txt
software/src/libfastcgipp/src/: http.cpp  manager.cpp  request.cpp
software/src/libtaxihal/: CMakeLists.txt
software/src/libtaxihal/hal/: bits.h  common.h  common_defines.h  drs4.h  drs4_defines.h  dummy.c  icescint.h  icescint_decoder.hpp  icescint_defines.h  icescint_panelGeneralPurposeBoard.hpp  polarstern.h  polarstern_defines.h  uvlogger.h  uvlogger_defines.h
software/src/polarstern/: CMakeLists.txt
software/src/polarstern/polarsternEventReceiver/: CMakeLists.txt
software/src/polarstern/polarsternEventSender/: CMakeLists.txt  main.cpp  zmq.hpp
software/src/polarstern/polarstern_config/: CMakeLists.txt  main.cpp
software/src/polarstern/polarstern_rates/: CMakeLists.txt  main.cpp
software/src/polarsternEventReceiver/: main.cpp
software/src/polarsternScrip/: report.py
software/src/smcrw/: CMakeLists.txt  main.cpp
software/src/thriftExampleServer/: CMakeLists.txt  example.thrift  main.cpp
software/src/uvlogger/: CMakeLists.txt
software/src/uvlogger/uvlogger_config/: CMakeLists.txt  main.cpp
software/src/uvlogger/uvlogger_debugger/: CMakeLists.txt  main.cpp
software/src/uvlogger/uvlogger_ledtune/: CMakeLists.txt  main.cpp
software/src/uvlogger/uvlogger_rates/: CMakeLists.txt  main.cpp
(+1285 files in other folders)
